--- a/css/style.css
+++ b/css/style.css
@@ -52,14 +52,6 @@ header{
     bottom: 20px;
 }
 
-.card_back{
-    object-fit: contain;
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    border-radius: 5%;
-}
-
 .card:hover .card_back{
     display: none;
 }
@@ -90,4 +82,13 @@ header{
 
 footer{
     text-align: center;
+}
+
+.card_back{
+    background-image: url('../img/pattern.png');
+    background-size: contain;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    border-radius: 5%;
 }
